--- a/views/home.html
+++ b/views/home.html
@@ -236,7 +236,7 @@
                         </mu-button>
                     </mu-tooltip>
                     <mu-tooltip placement="top" content="Github">
-                        <mu-button large icon color="success">
+                        <mu-button large icon color="success" @click="location.href='#'" >
                             <mu-icon value="star"></mu-icon>
 
                         </mu-button>
