--- a/views/home.html
+++ b/views/home.html
@@ -286,7 +286,8 @@
         el: '#app',
         data() {
             return {
-                host: 'http://localhost:8088/v1/',
+             //   host: 'http://localhost:8088/v1/',
+                host: '/api/',
                 docked: false,
                 openList: '',
                 open: false,
